# torchjd

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml
.github/actions/install-deps/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/setup/: action.yml
.github/actions/setup-uv/: action.yml
.github/actions/upload-codecov/: action.yml
.github/workflows/: build-deploy-dev-docs.yml  build-deploy-docs.yml  build_deploy_documentation.yml  check-todos.yml  checks.yml  cleanup-pr-docs.yml  gpu_tests.yml  hooks_test_pr.yml  pre_commit.yml  release.yml  tagger.yml  test_action.yml  tests.yml
docs/: Makefile
docs/source/: conf.py  index.rst  installation.md  jacobian_descent.rst
docs/source/_templates/: page.html
docs/source/docs/: backward.rst  multi_task_backward.rst  sparse.rst
docs/source/examples/: amp.rst  basic_usage.rst  index.rst  iwmtl.rst  iwrm.rst  lightning_integration.rst  monitoring.rst  mtl.rst  multi_task.rst  partial_jd.rst  rnn.rst  sparse.rst  ssjd.rst  test.rst
pr/292/: objects.inv  searchindex.js
pr/292/examples/: index.html
pr/292/genindex/: index.html
pr/292/installation/: index.html
pr/292/search/: index.html
src/torchjd/: __init__.py  _utils.py  backward.py
src/torchjd/_autogram/: __init__.py  _activable_hook_factory.py  _activator.py  _augment_model.py  _autograd_functions.py  _edge_registry.py  _forward_hooks.py  _gramian_accumulator.py  _handle.py  _hook_activator.py  _module_activator.py  _rev_gram_acc.py  _target_registry.py  _utils.py  _vgp.py  _vjp.py  plot_graph.py
src/torchjd/_autojac/: __init__.py  _backward.py  _mtl_backward.py  _utils.py  sparse_utils.py
src/torchjd/_linalg/: __init__.py  _gramian.py  _matrix.py  gramian.py  matrix.py
src/torchjd/_modules/: iwrm_sequential.py
src/torchjd/_transform/: __init__.py  _differentiation.py  _utils.py  aggregation.py  base.py  concatenation.py  diagonalize.py  grad.py  identity.py  init.py  jac.py  matrixify.py  reshape.py  scaling.py  stack.py  store.py  subset.py
src/torchjd/_utils/: __init__.py  compute_gramian.py
src/torchjd/aggregation/: __init__.py  _aggregator_bases.py  _aligned_mtl.py  _cagrad.py  _check_dependencies.py  _config.py  _constant.py  _dnq.py  _dnq_upgrad.py  _dual_cone_utils.py  _dualproj.py  _flattening.py  _graddrop.py  _gramian_utils.py  _imtl_g.py  _krum.py  _mean.py  _mgda.py  _nash_mtl.py  _normalizing.py  _pcgrad.py  _pref_vector_utils.py  _random.py  _stch.py  _str_utils.py  _sum.py  _trimmed_mean.py  _upgrad.py  _weighting_bases.py  aggregator_bases.py  aligned_mtl.py  bases.py  cagrad.py  config.py  constant.py  dualproj.py  graddrop.py  gradnorm_wrapper.py  gradvac.py  hierachical_weighting.py  (+12 more)
src/torchjd/autogram/: __init__.py  _augment_model.py  _autogram_data.py  _edge_registry.py  _engine.py  _forward_hooks.py  _gramian_accumulator.py  _gramian_computer.py  _gramian_reverse_accumulator.py  _gramian_utils.py  _handle.py  _jacobian_computer.py  _module_hook_manager.py  _module_utils.py  _utils.py  _vgp.py  _vjp.py  diagonal_sparse_tensor.py  differentiation_graph.py  grad.py  gram.py  jac.py
src/torchjd/autojac/: __init__.py  _accumulation.py  _backward.py  _jac.py  _jac_to_grad.py  _mtl_backward.py  _utils.py  backward.py  gramian_backwardable_sequential.py  mtl_backward.py  multi_task_backward.py
src/torchjd/backward/: __init__.py  backward.py  multi_task_backward.py
src/torchjd/sparse/: __init__.py  _autograd.py  _coalesce.py  _diagonal_sparse_tensor.py  _linalg.py  _patch.py  _registry.py  _sparse_latticed_tensor.py  _structured_sparse_tensor.py  _utils.py
src/torchjd/transform/: __init__.py  _differentiation.py  _utils.py  aggregation.py  base.py  concatenation.py  diagonalize.py  grad.py  identity.py  init.py  jac.py  matrixify.py  reshape.py  scaling.py  stack.py  store.py  subset.py  tensor_dict.py
src/torchjd/utils/: __init__.py  _accumulation.py  _jac_to_grad.py  _tensor_with_jac.py  backward.py
stable/: .buildinfo  index.html
stable/_sources/examples/: index.rst.txt
stable/_static/: documentation_options.js
stable/py-modindex/: index.html
tests/: conftest.py  device.py  paths.py  settings.py
tests/applications/: vae.py
tests/computation_time/: matrix_function.py
tests/doc/: test_aggregation.py  test_autogram.py  test_backward.py  test_backward_vmap.py  test_jac.py  test_jac_to_grad.py  test_mtl_backward.py  test_multi_task_backward.py  test_rst.py  test_utils.py
tests/gpu/: test_gpu.py
tests/plots/: _utils.py  interactive_plotter.py  static_plotter.py  static_plotter_all.py  static_plotter_upgrad.py
tests/profiling/: compare_traces.py  plot_memory_timeline.py  run_profiler.py  speed_grad_vs_jac_vs_gram.py
tests/speed/: utils.py
tests/speed/autogram/: grad_vs_jac_vs_gram.py  transformer.py
tests/unit/: _utils.py  conftest.py  test_backward.py  test_deprecations.py
tests/unit/_transform/: test_base.py  test_concatenation.py  test_diagonalize.py  test_grad.py  test_identity.py  test_init.py  test_interactions.py  test_jac.py  test_matrixify.py  test_reshape.py  test_scaling.py  test_stack.py  test_store.py  test_subset.py  test_tensor_dict.py
tests/unit/aggregation/: _asserts.py  _inputs.py  _matrix_samplers.py  _property_testers.py  test_aggregator_bases.py  test_aligned_mtl.py  test_base.py  test_cagrad.py  test_config.py  test_constant.py  test_dnq.py  test_dnq_upgrad.py  test_dual_cone_utils.py  test_dualproj.py  test_graddrop.py  test_gradnorm_wrapper.py  test_gradvac.py  test_imtl_g.py  test_krum.py  test_mean.py  test_mgda.py  test_nash_mtl.py  test_normalizing.py  test_pcgrad.py  test_pref_vector_utils.py  test_random.py  test_stch.py  test_sum.py  test_trimmed_mean.py  test_upgrad.py  test_values.py  test_weighting_bases.py
tests/unit/autogram/: _architectures.py  test_algo_3.py  test_augment_model.py  test_backward_vmap.py  test_vgp.py  (+10 more)
tests/utils/: architectures.py  asserts.py  autograd_compute_gramian.py  contexts.py  dict_assertions.py  forward_backwards.py  tensors.py
(+257 files in other folders)
