[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "torchjd"
version = "0.8.1"
description = "Library for Jacobian Descent with PyTorch."
readme = "README.md"
authors = [
    {name = "Valerian Rey", email = "valerian.rey@gmail.com"},
    {name = "Pierre Quinton", email = "pierre.quinton@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "quadprog>=0.1.9, != 0.1.10",  # Doesn't work before 0.1.9, 0.1.10 is yanked
    "numpy>=1.21.0",  # Does not work before 1.21
    "qpsolvers>=1.0.1",  # Does not work before 1.0.1
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
[project.license]
text = """
MIT License

Copyright (c) Valérian Rey, Pierre Quinton

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
"""

[project.urls]
Homepage = "https://torchjd.org/"
Documentation = "https://torchjd.org/"
Source = "https://github.com/TorchJD/torchjd"
Changelog = "https://github.com/TorchJD/torchjd/blob/main/CHANGELOG.md"

[dependency-groups]
check = [
    "mypy>=1.16.0",
    "pre-commit>=2.9.2",  # isort doesn't work before 2.9.2
]

doc = [
    "sphinx>=6.0, !=7.2.0, !=7.2.1, !=7.2.3, !=7.2.4, !=7.2.5",  # Versions in [7.2.0, 7.2.5] have a bug with an internal torch import from _C
    "furo>=2023.0",  # Force it to be recent so that the theme looks better
    "tomli>=1.1",  # The load function doesn't work similarly before 1.1
    "sphinx-autodoc-typehints>=3.5.0",  # Bugged Union on Python 3.14 before 3.5.0
    "myst-parser>=3.0.1",  # Never tested lower versions
    "sphinx-design>=0.6.0",  # Never tested lower versions
]

test = [
    "pytest>=7.3",  # Before version 7.3, not all tests are run
    "pytest-cov>=6.0.0",  # Recent version to avoid problems, could be relaxed
    "lightning>=2.0.9",  # No OptimizerLRScheduler public type before 2.0.9
    "torchvision>=0.22.1"  # Recent version to avoid problems, could be relaxed
]

plot = [
    "plotly>=5.19.0",  # Recent version to avoid problems, could be relaxed
    "dash>=2.16.0",  # Recent version to avoid problems, could be relaxed
    "kaleido==0.2.1",  # Only works with locked version
]

[project.optional-dependencies]
nash_mtl = [
    "cvxpy>=1.3.0",  # Could be relaxed
    "ecos>=2.0.14",  # Does not work before 2.0.14
]
cagrad = [
    "cvxpy>=1.3.0",  # No Clarabel solver before 1.3.0
]
full = [
    "cvxpy>=1.3.0",  # No Clarabel solver before 1.3.0
    "ecos>=2.0.14",  # Does not work before 2.0.14
]

[tool.pytest.ini_options]
xfail_strict = true
